--- a/src/azure-pipelines.yml
+++ b/src/azure-pipelines.yml
@@ -5,7 +5,7 @@ trigger:
       - master
   paths:
     include:
-      - '/basic_samples/Authentication/AuthorizationCodeFlow/Python'
+      - '/src/'
 
 pr:
   branches:
@@ -13,7 +13,7 @@ pr:
       - master
   paths:
     include:
-      - '/basic_samples/Authentication/AuthorizationCodeFlow/Python'
+      - '/src/'
 
 schedules:
   - cron: '0 0 * * 0'
@@ -23,10 +23,17 @@ schedules:
         - master
     always: true
 
+resources:
+  repositories:
+  - repository: templates
+    type: github
+    name: osisoft/OSI-Samples
+    endpoint: osisoft/OSI-Samples
+
 variables:
-  - template: '/miscellaneous/build_templates/variables.yml'
+  - template: '/miscellaneous/build_templates/variables.yml@templates'
   - name: projPath
-    value: '/basic_samples/Authentication/AuthorizationCodeFlow/Python'
+    value: '/src/'
   - name: CredFile
     value: config.ini
   - name: CredFileLibrary
@@ -54,7 +61,7 @@ jobs:
         displayName: Set Chrome Path
         condition: eq(variables['imageName'],'windows-latest')
 
-      - template: '/miscellaneous/build_templates/config.yml'
+      - template: '/miscellaneous/build_templates/config.yml@templates'
         parameters:
           fileOriginal: $(CredFile)
           fileLibrary: $(CredFileLibrary)
@@ -85,6 +92,6 @@ jobs:
         displayName: 'Publish test results'
         condition: always()
 
-  - template: '/miscellaneous/build_templates/analysis.yml'
+  - template: '/miscellaneous/build_templates/analysis.yml@templates'
     parameters:
       language: python
