--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,8 +37,9 @@ jobs:
   - job: Tests
     strategy:
       matrix:
-        linux:
-          agentOS: Linux
+        # TODO: Add Linux run when agents are ready
+        # linux:
+        #   agentOS: Linux
         windows:
           agentOS: Windows_NT
     pool:
@@ -69,7 +70,11 @@ jobs:
         displayName: 'Publish test results'
         condition: always()
 
+  - job: Analysis
+    pool:
+      name: 00-OSIManaged-Containers
+      demands: Agent.OS -equals Windows_NT
+    steps:
       - template: '/miscellaneous/build_templates/analysis.yml@templates'
         parameters:
-          skip: eq(variables['Agent.OS'], 'Linux')
           useRequirementsTxt: true
