Clean up chromedriver steps

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,26 +51,10 @@ jobs:
           fileOriginal: $(CredFile)
           fileLibrary: $(CredFileLibrary)
 
-      - script: npm install chromedriver
-        displayName: 'Install chromedriver'
-
       - script: |
-          echo %PATH%
-          echo set PATH=%PATH%;$(Build.SourcesDirectory)\node_modules\chromedriver\lib\chromedriver
+          echo Install chromedriver
+          npm install chromedriver
           set PATH=%PATH%;$(Build.SourcesDirectory)\node_modules\chromedriver\lib\chromedriver
-          echo %PATH%
-        displayName: 'Add chromedriver to PATH'
-
-      - script: dir
-
-      - script: dir
-        workingDirectory: $(Build.SourcesDirectory)\node_modules\chromedriver\lib\chromedriver
-
-      - script: echo %PATH%
-
-      - script: |
-          set PATH=%PATH%;$(Build.SourcesDirectory)\node_modules\chromedriver\lib\chromedriver
-          echo %PATH%
           echo Install test tools
           pip install pytest
           pip install selenium
