Enable linux job

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,9 +37,8 @@ jobs:
   - job: Tests
     strategy:
       matrix:
-        # TODO: Add Linux run when agents are ready
-        # linux:
-        #   agentOS: Linux
+        linux:
+          agentOS: Linux
         windows:
           agentOS: Windows_NT
     pool:
