--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,22 +35,15 @@ variables:
 
 jobs:
   - job: Tests
-    strategy:
-      matrix:
-        linux:
-          agentOS: Linux
-        windows:
-          agentOS: Windows_NT
     pool:
       name: 00-OSIManaged-Containers
-      demands: Agent.OS -equals $(agentOS)
+      demands: Agent.OS -equals Windows_NT
     steps:
       - template: '/miscellaneous/build_templates/config.yml@templates'
         parameters:
           fileOriginal: $(CredFile)
           fileLibrary: $(CredFileLibrary)
 
-      # Adds chromedriver to path in Windows Command Prompt syntax
       - script: |
           echo Install chromedriver
           npm install chromedriver
@@ -63,24 +56,7 @@ jobs:
           echo Run tests
           python -m pytest --junitxml=junit/test-results.xml  ./test.py
           echo Complete
-        displayName: 'Run tests (Windows)'
-        condition: eq(variables['Agent.OS'], 'Windows_NT')
-
-      # Adds chromedriver to path in Linux bash syntax
-      - script: |
-          echo Install chromedriver
-          npm install chromedriver
-          export PATH=$PATH:$(Agent.WorkFolder)/node_modules/chromedriver/lib/chromedriver
-          echo Install test tools
-          pip install pytest
-          pip install selenium
-          echo Install requirements
-          pip install -r requirements.txt
-          echo Run tests
-          python -m pytest --junitxml=junit/test-results.xml  ./test.py
-          echo Complete
-        displayName: 'Run tests (Linux)'
-        condition: eq(variables['Agent.OS'], 'Linux')
+        displayName: 'Run tests'
 
       - task: PublishTestResults@2
         inputs:
