--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,7 +57,7 @@ jobs:
           python -m pytest --junitxml=junit/test-results.xml  ./test.py
           echo Complete
         env:
-          CHROMEWEBDRIVER: $(Build.SourcesDirectory)\node_modules\chromedriver\lib\chromedriver
+          PATH: $(PATH);$(Build.SourcesDirectory)\node_modules\chromedriver\lib\chromedriver
         displayName: 'Run tests'
 
       - task: PublishTestResults@2
@@ -73,6 +73,10 @@ jobs:
       name: 00-OSIManaged-Containers
       demands: Agent.OS -equals Windows_NT
     steps:
+      - script: pip --version
+
+      - script: python -m pip install -U pip
+
       - script: pip --version
 
       - script: python --version
