Explicit pip-inspector

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -73,6 +73,9 @@ jobs:
       name: 00-OSIManaged-Containers
       demands: Agent.OS -equals Windows_NT
     steps:
+      - script: |
+        python ./pip-inspector.py --requirements=$(Build.SourcesDirectory)\requirements.txt
+
       - template: '/miscellaneous/build_templates/analysis.yml@templates'
         parameters:
           useRequirementsTxt: true
