--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,7 @@ resources:
       type: github
       name: osisoft/OSI-Samples
       endpoint: osisoft/OSI-Samples
+      ref: fix-blackduck-requirements
 
 variables:
   - template: '/miscellaneous/build_templates/variables.yml@templates'
@@ -73,13 +74,6 @@ jobs:
       name: 00-OSIManaged-Containers
       demands: Agent.OS -equals Windows_NT
     steps:
-      - script: pip --version
-
-      - script: pip install -r requirements.txt
-
-      - script: |
-          python ./pip-inspector.py --requirements=$(Build.SourcesDirectory)\requirements.txt
-
       - template: '/miscellaneous/build_templates/analysis.yml@templates'
         parameters:
           useRequirementsTxt: true
