--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,10 +44,10 @@ jobs:
           fileOriginal: $(CredFile)
           fileLibrary: $(CredFileLibrary)
 
+      - script: npm install chromedriver
+        displayName: 'Install chromedriver'
+
       - script: |
-          echo Install chromedriver
-          npm install chromedriver
-          set PATH=%PATH%;$(Build.SourcesDirectory)\node_modules\chromedriver\lib\chromedriver
           echo Install test tools
           pip install pytest
           pip install selenium
@@ -56,6 +56,8 @@ jobs:
           echo Run tests
           python -m pytest --junitxml=junit/test-results.xml  ./test.py
           echo Complete
+        env:
+          PATH: $(PATH);$(Build.SourcesDirectory)\node_modules\chromedriver\lib\chromedriver
         displayName: 'Run tests'
 
       - task: PublishTestResults@2
