--- a/.gitignore
+++ b/.gitignore
@@ -137,6 +137,9 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# VSCode files
+.vscode/
+
 # Credential Config Files
 product-readiness.*
 config.ini
