--- a/appsettings.placeholder.json
+++ b/appsettings.placeholder.json
@@ -1,5 +1,5 @@
 {
-  "Resource": "https://dat-b.osisoft.com",
+  "Resource": "https://uswe.datahub.connect.aveva.com",
   "TenantId": "PLACEHOLDER_REPLACE_WITH_TENANT_ID",
   "ClientId": "PLACEHOLDER_REPLACE_WITH_APPLICATION_IDENTIFIER",
   "Username": "PLACEHOLDER_REPLACE_WITH_USERNAME_TEST_ONLY",
